--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,10 +7,10 @@
 
   {% include social.html %}
 
-  {%- assign theme_name = "portfolYOU" -%}
-  {%- assign theme_repo = "https://github.com/YoussefRaafatNasry/portfolYOU" -%}
+  {%- assign theme_name = "github" -%}
+  {%- assign theme_repo = "https://github.com/dntjr031/" -%}
   <small id="attribution">
     theme <a href="{{ theme_repo }}">{{ theme_name }}</a>
   </small>
-  
+
 </footer>
