--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,87 @@
 ---
 ---
+
 @import "portfolYOU";
 
 #attribution {
     visibility: hidden;
+}
+/* https://github.com/lonekorean/gist-syntax-themes */
+@import url('https://cdn.rawgit.com/lonekorean/gist-syntax-themes/d49b91b3/stylesheets/one-dark.css');
+
+
+.gist .blob-code-inner {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji",
+    ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace !important;
+}
+
+[data-theme="dark"] .gist {
+    filter: none !important;
+}
+
+.gist-meta {
+    display: none;
+}
+
+body .gist .highlight {
+    background: #2c2838 !important;
+}
+
+.gist .gist-file, .gist .gist-data {
+    border: none !important;
+}
+
+.gist .gist-data {
+    background-color: #2c2838 !important;
+    border-radius: 6px !important;
+}
+
+.gist .gist-file {
+    box-shadow: 0 0 6px 2px #00000054;
+}
+[data-theme="dark"] .gist .gist-file {
+    box-shadow: 0 0 6px 2px rgba(255, 255, 255, 0.33);
+}
+
+$arrows: right, left;
+
+@each $arrow in $arrows {
+    .ws-page-link-#{$arrow} > a {
+        display: flex;
+        align-items: center;
+
+        &::before {
+            @if $arrow == right {
+                position:absolute;
+                right: 36px;
+            }
+            content: url('/assets/images/#{$arrow}-arrow.svg');
+            width: 50px;
+            height: 50px;
+            display: inline-block;
+            transition: opacity 0.2s ease;
+        }
+
+        &::after {
+            @if $arrow == left {
+                position:absolute;
+            }
+            opacity:0;
+            width: 50px;
+            height: 50px;
+            display: inline-block;
+            content: url('/assets/images/#{$arrow}-arrow-white.svg');
+            transition: opacity 0.2s ease;
+        }
+
+        &:hover {
+            &:after{
+                opacity:1;
+            }
+            &:before{
+                opacity:0;
+            }
+        }
+    }
 }
